--- a/carpc/.classpath
+++ b/carpc/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pheifflib"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/pheiffswinglib"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/pheifflibpc"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
