--- a/carpc/.classpath
+++ b/carpc/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pheifflib"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pheifflibpc"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/car"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
